--- a/restful/src/main/resources/application.properties
+++ b/restful/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+logging.level.org.flywaydb.core=DEBUG
+
+spring.flyway.enabled=true
